cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(las_to_pcd)
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(las_to_pcd las_to_pcd.cpp)
target_link_libraries(las_to_pcd ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
